Refactored entrypoint